--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,21 @@ a {
     cursor: pointer;
 }
 
+p {
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    padding: 0;
+}
+
 ul {
     list-style: '';
     margin: 0;
@@ -39,5 +54,6 @@ ul {
 }
 
 ::placeholder {
-    color: var(--color-text-tint);
+    //color: var(--color-text-tint);
+    color: #757575;
 }
